vendor/sqlmodel_rust/crates/sqlmodel-console/tests/fixtures/golden/error_panel_plain.txt
=== SQL Syntax Error [ERROR] ===

Unexpected token near 'FORM'

Query:
  SELECT * FORM users WHERE id = 1
           ^

Hint: Did you mean 'FROM'?

SQLSTATE: 42601